--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -73,7 +73,7 @@
     _paq.push(["enableLinkTracking"]);
     (function () {
       var u = "//em.dopepod.me/";
-      _paq.push(["setTrackerUrl", u + "p"]);
+      _paq.push(["setTrackerUrl", u + "p.php"]);
       _paq.push(["setSiteId", "1"]);
       var d = document,
         g = d.createElement("script"),
@@ -81,7 +81,7 @@
       g.type = "text/javascript";
       g.async = true;
       g.defer = true;
-      g.src = u + "j";
+      g.src = u + "p.js";
       s.parentNode.insertBefore(g, s);
     })();
   </script>
