--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,73 +1,73 @@
 {% if episode %}
-<div class="container px-0">
-  <div class="col-12 col-lg-4 ml-auto">
-    <div class="color-1-trans" id="player-wrapper">
-      <div class="collapse fade" id="player-close-collapse">
-        <p>
-          Close player?
-        </p>
-        <button class="btn-dope player-close">
-          Yes
-        </button>
-        <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
-          No
-        </button>
-      </div>
-      <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-        <img class="img-fluid" src="https://{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
-      </a>
-      <div class="player-buttons">
-        <button class="btn-dope player-minimize">
-          <i class="fas fa-angle-down" title="Minimize"></i>
-        </button>
-        <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
-          <i class="fas fa-times" title="Close"></i>
-        </button>
-      </div>
-      <h1>
+  <div class="container px-0">
+    <div class="col-12 col-lg-4 ml-auto">
+      <div class="color-1-trans" id="player-wrapper">
+        <div class="collapse fade" id="player-close-collapse">
+          <p>
+            Close player?
+          </p>
+          <button class="btn-dope player-close">
+            Yes
+          </button>
+          <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
+            No
+          </button>
+        </div>
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
-          <span>
-            {{ episode.podcast.title }}
-          </span>
+          <img class="img-fluid" src="https://{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+          onerror="this.src='https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}" />
         </a>
-      </h1>
-      <p class="player-episode">
-        {{ episode.title }}
-      </p>
-      <p class="player-date">
-        Released
-        {% if episode.pubDate %}
-          {{ episode.pubDate|date:"d-m-Y H:i" }}
-        {% else %}
-          N/A
-        {% endif %}
-      </p>
-      <button class="btn-dope player-collapse-toggle" data-toggle="collapse" data-target="#player-collapse"
-        aria-expanded="false">
-        <i class="fas fa-angle-up" title="Expand"></i>
-      </button>
-      <div class="collapse fade player-collapse" id="player-collapse">
-        <p class="player-description">
-          {{ episode.description }}
+        <div class="player-buttons">
+          <button class="btn-dope player-minimize">
+            <i class="fas fa-angle-down fa-lg" title="Minimize"></i>
+          </button>
+          <button class="btn-dope player-close-toggle" data-toggle="collapse" data-target="#player-close-collapse" aria-expanded="false">
+            <i class="fas fa-times" title="Close"></i>
+          </button>
+        </div>
+        <h1>
+          <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
+            <span>
+              {{ episode.podcast.title }}
+            </span>
+          </a>
+        </h1>
+        <p class="player-episode">
+          {{ episode.title }}
         </p>
-        <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
-          <i class="fas fa-download"></i>
-        </a>
+        <p class="player-date">
+          Released
+          {% if episode.pubDate %}
+            {{ episode.pubDate|date:"d-m-Y H:i" }}
+          {% else %}
+            N/A
+          {% endif %}
+        </p>
+        <div class="collapse fade player-collapse" id="player-collapse">
+          <p class="player-description">
+            {{ episode.description }}
+          </p>
+          <a class="btn-dope" href="{{ episode.url }}" title="Download" download>
+            <i class="fas fa-download"></i>
+          </a>
+        </div>
+        <button class="btn-dope player-collapse-toggle" data-toggle="collapse" data-target="#player-collapse"
+          aria-expanded="false">
+          <i class="fas fa-angle-up fa-lg" title="Expand"></i>
+        </button>        
+        <audio {% if user.is_authenticated %}onended="playNext()"{% else %}onended="closePlayer()"{% endif %} controls preload="metadata" autoplay>
+          <source src="{{ episode.url }}"/>
+        </audio>
       </div>
-      <audio {% if user.is_authenticated %}onended="playNext()"{% else %}onended="closePlayer()"{% endif %} controls preload="metadata" autoplay>
-        <source src="{{ episode.url }}"/>
-      </audio>
     </div>
   </div>
-</div>
 {% elif cookie_banner %}
-<div class="col-12">
-  <div class="color-1-trans" id="cookie-banner">
-    <h1>This site uses cookies</h1>
-    <button class="btn-dope cookie-banner-close">
-      <i class="fas fa-times"></i>
-    </button>
+  <div class="col-12">
+    <div class="color-1-trans" id="cookie-banner">
+      <h1>This site uses cookies</h1>
+      <button class="btn-dope cookie-banner-close">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
   </div>
-</div>
 {% endif %}
