--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -13,7 +13,7 @@
         <img class="img-fluid" src="https://{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
-      <button class="dope-toggle" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
+      <button class="dope-toggle exp" data-toggle="collapse" data-target="#last-played-collapse{{ forloop.counter }}"
       aria-expanded="false">
         <i class="fas fa-angle-up fa-lg" title="Expand"></i>
       </button>
