--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12 order-2 col-lg-4 order-lg-1 dope-wrapper">
-    <a class="btn-dope" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
+    <a class="btn-dope exp" data-toggle="collapse" href="#change-collapse" aria-expanded="false" aria-controls="change-collapse">
       Change Password
     </a>
     <div class="collapse fade settings-collapse" id="change-collapse">
@@ -36,7 +36,7 @@
         {% include "errors.min.html" %}
       </div>
     {% endif %}
-    <a class="btn-dope" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
+    <a class="btn-dope exp" data-toggle="collapse" href="#general-collapse" aria-expanded="false" aria-controls="general-collapse">
       General Settings
     </a>
     <div class="collapse fade settings-collapse" id="general-collapse">
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="col-12 order-3 col-lg-4 dope-wrapper">
-    <a class="btn-dope" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
+    <a class="btn-dope exp" data-toggle="collapse" href="#solong-collapse" aria-expanded="false" aria-controls="solong-collapse">
       Delete Account
     </a>
     <div class="collapse fade settings-collapse" id="solong-collapse">
