--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -5,19 +5,34 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="google-site-verification" content="C_pKaDqcaoXRjIhDwecTsDw_eqBTcbuJkkWyxuOvINI" />
   <meta name="viewport" content="width=device-width, initial-scale=1,
-    shrink-to-fit=no">
-  <meta name="description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts.">
-  <meta name="application-name" content="dopepod">
+    shrink-to-fit=no" />
+  <meta property="og:title" content="dopepod" />
+  <meta property="og:url" content="https://dopepod.me" />
+  <meta property="og:image" content="{% static 'dopepod.png' %}" />
+  {% if results.view == "splash" or results.view == "dashboard" %}
+    <link rel="canonical" href="https://dopepod.me">
+  {% endif %}
+  {% if results.view == 'showpod' %}
+    <meta property="og:type" content="podcast" />
+    <meta property="og:description" content="Listen to episodes of {{ results.header }} | dopepod" />
+  {% else %}
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts." />
+  {% endif %}
+  <meta property="og:site_name" content="dopepod" />
+  <meta name="description" content="{% if results.view == 'showpod' %}{{ podcast.description }}{% else %}dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts.{% endif %}" />
+  <meta name="application-name" content="dopepod" />
   <title>
     {% block title %} {% endblock %}
   </title>
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
-  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Orbitron" />
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Exo"> 
-  <link rel="stylesheet" href="{% static 'style.min.css' %}">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Exo" />
+  <link rel="stylesheet" href="{% static 'style.min.css' %}" />
 </head>
 <body class="{% if user.profile.theme %}{{ user.profile.theme }}{% else %}light{% endif %}">
   <div class="container-fluid px-0">
