--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -411,12 +411,20 @@
         {% endif %}
       </div>
       <div class="login-buttons">
-        <a class="btn-dope btn-dope-social socialaccount_provider" href="/account/google/login/?process=login">
+        <a class="btn-dope btn-dope-social" href="/account/google/login/?process=login">
           <span class="social-icon">
             <i class="fab fa-google" title="Google Login"></i>
           </span>
           <span class="social-button">
             Sign in with Google
+          </span>
+        </a>
+        <a class="btn-dope btn-dope-social" href="/account/facebook/login/?process=login">
+          <span class="social-icon">
+            <i class="fab fa-facebook-f" title="Facebook Login"></i>
+          </span>
+          <span class="social-button">
+            Sign in with Facebook
           </span>
         </a>
       </div>
