--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -10,20 +10,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,
     shrink-to-fit=no" />
   <meta property="og:title" content="dopepod" />
-  <meta property="og:url" content="https://dopepod.me" />
-  <meta property="og:image" content="{% static 'dopepod.png' %}" />
-  {% if results.view == "splash" or results.view == "dashboard" %}
-    <link rel="canonical" href="https://dopepod.me">
-  {% endif %}
   {% if results.view == 'showpod' %}
+    <meta property="og:image" content="{{ results.podcast.artworkUrl }}" />
+    <link rel="canonical" href="https://dopepod.me{{ results.podcast.get_absolute_url }}">
+    <meta property="og:url" content="https://dopepod.me{{ results.podcast.get_absolute_url }}" />
     <meta property="og:type" content="podcast" />
-    <meta property="og:description" content="Listen to episodes of {{ results.header }} | dopepod" />
+    <meta property="og:description" content="Listen to episodes of {{ results.podcast.title }} on dopepod" />
+    <meta name="description" content="{{ results.podcast.description }}" />
   {% else %}
+    <meta property="og:image" content="{% static 'dopepod.png' %}" />
+    <link rel="canonical" href="https://dopepod.me">
+    <meta property="og:url" content="https://dopepod.me" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts." />
+    <meta name="description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts." />
   {% endif %}
   <meta property="og:site_name" content="dopepod" />
-  <meta name="description" content="{% if results.view == 'showpod' %}{{ podcast.description }}{% else %}dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts.{% endif %}" />
   <meta name="application-name" content="dopepod" />
   <title>
     {% block title %} {% endblock %}
