--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -5,5 +5,20 @@
         About
       </a>
     </li>
+    <li>
+      <a class="dopebar-link contact-link" href="{% url 'contact' %}">
+        Contact
+      </a>
+    </li>
+    <li>
+      <a class="dopebar-link privacy-link" href="{% url 'privacy' %}">
+        Privacy
+      </a>
+    </li>
+    <li>
+      <a class="dopebar-link terms-link" href="{% url 'terms' %}">
+        Terms
+      </a>
+    </li>
   </ul>
 </div>
