--- a/index/templates/footer.min.html
+++ b/index/templates/footer.min.html
@@ -1,1 +1,1 @@
-<div class="container px-0"><ul><li><a class="dopebar-link about-link" href="{% url 'about' %}">About</a></li></ul></div>
+<div class="container px-0"><ul><li><a class="dopebar-link about-link" href="{% url 'about' %}">About</a></li><li><a class="dopebar-link contact-link" href="{% url 'contact' %}">Contact</a></li><li><a class="dopebar-link privacy-link" href="{% url 'privacy' %}">Privacy</a></li><li><a class="dopebar-link terms-link" href="{% url 'terms' %}">Terms</a></li></ul></div>
