social media integration

--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -72,7 +72,7 @@
         </em>
       </li>
       <li>
-        <a class="btn-dope btn-dope-social" href="https://twitter.com/intent/tweet?text={{ podcast.title }}&url=https://dopepod.me{{ podcast.get_absolute_url }}">
+        <a class="btn-dope btn-dope-social" href="https://twitter.com/intent/tweet?text={{ podcast.url_format }}&url=https://dopepod.me{{ podcast.get_absolute_url }}">
           <span class="social-icon">
             <i class="fab fa-twitter" title="Tweet"></i>
           </span>
