social media integration

--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -25,6 +25,8 @@
     <meta property="og:description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts." />
     <meta name="description" content="dopepod is a simple platform-independent podcast web app. Listen and subscribe to all your favorite podcasts." />
   {% endif %}
+  <meta property="fb:app_id" content="172865916719691" />
+  <meta property="fb:admins" content="100001794715034"/>
   <meta property="og:site_name" content="dopepod" />
   <meta name="application-name" content="dopepod" />
   <title>
