social media integration

--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -419,14 +419,14 @@
             Sign in with Google
           </span>
         </a>
-        <a class="btn-dope btn-dope-social" href="/account/facebook/login/?process=login">
+        <!--<a class="btn-dope btn-dope-social" href="/account/facebook/login/?process=login">
           <span class="social-icon">
             <i class="fab fa-facebook-f" title="Facebook Login"></i>
           </span>
           <span class="social-button">
             Sign in with Facebook
           </span>
-        </a>
+        </a>-->
       </div>
     {% elif results.view == "dashboard" %}
       {% if errors or message %}
