--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -410,7 +410,7 @@
           </button>
         {% endif %}
       </div>
-      <div class="login-buttons">
+      <!--<div class="login-buttons">
         <a class="btn-dope btn-dope-social" href="/account/google/login/?process=login">
           <span class="social-icon">
             <i class="fab fa-google" title="Google Login"></i>
@@ -419,15 +419,15 @@
             Sign in with Google
           </span>
         </a>
-        <!--<a class="btn-dope btn-dope-social" href="/account/facebook/login/?process=login">
+        <a class="btn-dope btn-dope-social" href="/account/facebook/login/?process=login">
           <span class="social-icon">
             <i class="fab fa-facebook-f" title="Facebook Login"></i>
           </span>
           <span class="social-button">
             Sign in with Facebook
           </span>
-        </a>-->
-      </div>
+        </a>
+    </div>-->
     {% elif results.view == "dashboard" %}
       {% if errors or message %}
         <div class="errors">
