--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,9 @@
 <div class="logo">
-  <button class="btn-dope active">d</button>
-  <button class="btn-dope active">o</button>
-  <button class="btn-dope active">p</button>
-  <button class="btn-dope active">e</button>
-  <button class="btn-dope active">p</button>
-  <button class="btn-dope active">o</button>
-  <button class="btn-dope active">d</button>
+  <button class="btn-dope index-link active" href="/">d</button>
+  <button class="btn-dope index-link active" href="/">o</button>
+  <button class="btn-dope index-link active" href="/">p</button>
+  <button class="btn-dope index-link active" href="/">e</button>
+  <button class="btn-dope index-link active" href="/">p</button>
+  <button class="btn-dope index-link active" href="/">o</button>
+  <button class="btn-dope index-link active" href="/">d</button>
 </div>
