--- a/index/templates/genre-carousel.html
+++ b/index/templates/genre-carousel.html
@@ -1,13 +1,10 @@
 {% if results.genres %}
   {% with results.genres as genres %}
-    <div id="genre-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
-      <h1>{{ genres.count }} genres</h1>
-      <a class="btn-dope" href="#genre-carousel" role="button" data-slide="prev">
-        <i class="fas fa-angle-up" title="Previous"></i>
-      </a>
-      <div class="carousel-inner">
-        {% for genre in genres %}
-          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?genre={{ genre.url_format }}&view=grid">
+    <h1>{{ genres.count }} genres</h1>
+    <div class="slick">
+      {% for genre in genres %}
+        <div class="slick-slide">
+          <a class="slick-item browse-link" href="/search/?genre={{ genre.url_format }}&view=grid">
             <h1>
               <strong>
                 {{ genre }}
@@ -17,11 +14,8 @@
               {{ genre.n_podcasts }} podcasts
             </p>
           </a>
-        {% endfor %}
-      </div>
-      <a class="btn-dope" href="#genre-carousel" role="button" data-slide="next">
-        <i class="fas fa-angle-down" title="Next"></i>
-      </a>
+        </div>
+      {% endfor %}      
     </div>
   {% endwith%}
 {% endif %}
