--- a/index/templates/language-carousel.html
+++ b/index/templates/language-carousel.html
@@ -1,13 +1,10 @@
 {% if results.languages %}
   {% with results.languages as languages %}
-    <div id="language-carousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="2000">
-      <h1>{{ languages.count }} languages</h1>
-      <a class="btn-dope" href="#language-carousel" role="button" data-slide="prev">
-        <i class="fas fa-angle-up" title="Previous"></i>
-      </a>
-      <div class="carousel-inner">
-        {% for language in languages %}
-          <a class="carousel-item{% if forloop.first %} active{% endif %} browse-link" href="/search/?language={{ language.url_format }}&view=grid">
+    <h1>{{ languages.count }} languages</h1>  
+    <div class="slick">
+      {% for language in languages %}
+        <div class="slick-slide">
+          <a class="slick-item browse-link" href="/search/?language={{ language.url_format }}&view=grid">
             <h1>
               <strong>
                 {{ language }}
@@ -17,11 +14,8 @@
               {{ language.n_podcasts }} podcasts
             </p>
           </a>
-        {% endfor %}
-      </div>
-      <a class="btn-dope" href="#language-carousel" role="button" data-slide="next">
-        <i class="fas fa-angle-down" title="Next"></i>
-      </a>
+        </div>
+      {% endfor %}      
     </div>
-  {% endwith %}
+  {% endwith%}
 {% endif %}
