--- a/index/templates/privacy.html
+++ b/index/templates/privacy.html
@@ -198,5 +198,5 @@
   Contacting Us
 </strong>
 <p>
-  If there are any questions regarding this privacy policy, you may contact us using the information below.
+  If there are any questions regarding this privacy policy, you may contact via the <a class="contact-link" href="{% url 'contact' %}">contact form</a>.
 </p>
