--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -22,6 +22,14 @@
               is a free, mobile-friendly podcast web app that
               scours the internet for fresh episodes so you don't have to.
             </p>
+            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
+              <label for="q" class="sr-only">Search for podcasts</label>
+              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              <button class="search-button" type="submit">
+                <i class="fa fa-search icon" title="Search"></i>
+              </button>
+            </form>            
             <p>
               Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
             </p>
@@ -55,9 +63,9 @@
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
                     </span>
-                    <p>
+                    <strong>
                       Remember me
-                    </p>
+                    </strong>
                   </label>
                 </div>
               </div>
@@ -117,6 +125,14 @@
             <p>
               Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
             </p>
+            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
+              <label for="q" class="sr-only">Search for podcasts</label>
+              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              <button class="search-button" type="submit">
+                <i class="fa fa-search icon" title="Search"></i>
+              </button>
+            </form>
           </div>
           <div class="collapse fade login-collapse show" id="login-collapse">
             <form class="login-form" method="POST" action="{% url 'login' %}">
@@ -147,9 +163,9 @@
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
                     </span>
-                    <p>
+                    <strong>
                       Remember me
-                    </p>
+                    </strong>
                   </label>
                 </div>
               </div>
@@ -206,6 +222,14 @@
               is a free, mobile-friendly podcast web app that
               scours the internet for fresh episodes so you don't have to.
             </p>
+            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
+              <label for="q" class="sr-only">Search for podcasts</label>
+              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              <button class="search-button" type="submit">
+                <i class="fa fa-search icon" title="Search"></i>
+              </button>
+            </form>            
             <p>
               Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
             </p>
@@ -239,9 +263,9 @@
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
                     </span>
-                    <p>
+                    <strong>
                       Remember me
-                    </p>
+                    </strong>
                   </label>
                 </div>
               </div>
@@ -298,6 +322,14 @@
               is a free, mobile-friendly podcast web app that
               scours the internet for fresh episodes so you don't have to.
             </p>
+            <form class="form-inline search-form d-inline-block" method="GET" action="{% url 'search' %}">
+              <label for="q" class="sr-only">Search for podcasts</label>
+              <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
+              aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
+              <button class="search-button" type="submit">
+                <i class="fa fa-search icon" title="Search"></i>
+              </button>
+            </form>            
             <p>
               Sign up now to subscribe to all your favorite podcasts and to create a personal playlist.
             </p>
@@ -331,9 +363,9 @@
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
                     </span>
-                    <p>
+                    <strong>
                       Remember me
-                    </p>
+                    </strong>
                   </label>
                 </div>
               </div>
