--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -102,9 +102,9 @@
         <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
         aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8">
         <button class="search-button" type="submit">
-          <i class="fa fa-search icon"></i>
+          <i class="fa fa-search icon" title="Search"></i>
         </button>
-      </form>
+      </form>   
       <a class="dopebar-link lights-toggle" href="#">
         <i class="far fa-lightbulb fa-lg" title="Toggle Lights"></i>
       </a>
