--- a/index/templates/terms.html
+++ b/index/templates/terms.html
@@ -19,13 +19,13 @@
   of our affiliate / advertising partners may also use cookies.</p>
 <strong>License</strong>
 <p>Unless otherwise stated, dopepod and/or it’s licensors own the intellectual property rights for all material on dopepod.
-  All intellectual property rights are reserved. You may view and/or print pages from <a href="https://dopepod.me">https://dopepod.me</a> for your own personal
+  All intellectual property rights are reserved. You may view and/or print pages from <a class="index-link" href="/">https://dopepod.me</a> for your own personal
   use subject to restrictions set in these terms and conditions.</p>
 <p>You must not:</p>
 <ul>
-  <li>Republish material from <a href="https://dopepod.me">https://dopepod.me</a></li>
-  <li>Sell, rent or sub-license material from <a href="https://dopepod.me">https://dopepod.me</a></li>
-  <li>Reproduce, duplicate or copy material from <a href="https://dopepod.me">https://dopepod.me</a></li>
+  <li>Republish material from <a class="index-link" href="/">https://dopepod.me</a></li>
+  <li>Sell, rent or sub-license material from <a class="index-link" href="/">https://dopepod.me</a></li>
+  <li>Reproduce, duplicate or copy material from <a class="index-link" href="/">https://dopepod.me</a></li>
 </ul>
 <p>Redistribute content from dopepod (unless content is specifically made for redistribution).</p>
 <strong>Hyperlinking to our Content</strong>
@@ -70,8 +70,7 @@
   it products or services; and (c) fits within the context of the linking party's site.
 </p>
 <p>If you are among the organizations listed in paragraph 2 above and are interested in linking to our website, you must notify
- us via the
-<a href="https://dopepod.me">Contact</a> form. Please include your name, your organization name, contact information (such as a phone
+ us via the <a class="contact-link" href="{% url 'contact' %}">contact form</a>. Please include your name, your organization name, contact information (such as a phone
   number and/or e-mail address) as well as the URL of your site, a list of any URLs from which you intend to link to our
   Web site, and a list of the URL(s) on our site to which you would like to link. Allow 2-3 weeks for a response.</p>
 <p>Approved organizations may hyperlink to our Web site as follows:</p>
