--- a/index/static/style.css
+++ b/index/static/style.css
@@ -32,58 +32,6 @@ a:hover {
   background-attachment: fixed;
 }
 
-/* CHECKBOX */
-input[type=checkbox] {
-  visibility: hidden;
-}
-.checkbox {
-  width: 25px;
-  margin: 10px;
-  position: relative;
-}
-.dope-check-label .dope-check {
-  visibility: hidden;
-  /* <-- hide the default checkbox, the rest is to hide and alllow tabbing, which display:none prevents */
-  display: block;
-  height: 0;
-  width: 0;
-  position: absolute;
-  overflow: hidden;
-}
-.dope-check-label span {
-  /* <-- style the artificial checkbox */
-  position: relative;
-  height: 20px;
-  width: 20px;
-  border: 2px solid rgb(0, 191, 165);
-  border-radius: .25rem;
-  display: inline-block;
-  margin-right: 5px;
-}
-.dope-check-label strong {
-  display: inline-block;
-  vertical-align: top;
-}
-[type=checkbox]:checked+span:after {
-  content: '';
-  position: absolute;
-  width: 10px;
-  height: 7px;
-  background: 0 0;
-  top: 3px;
-  left: 3px;
-  border: 3px solid #00bfa5;
-  border-top: none;
-  border-right: none;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  opacity: 0;
-}
-[type=checkbox]:checked+span:after {
-  opacity: 1;
-}
-
 /* COOKIE BANNER */
 #cookie-banner {
   z-index: 1000;
@@ -437,6 +385,59 @@ input[type=checkbox] {
   color: #fff;
 }
 
+/* CHECKBOX */
+input[type=checkbox] {
+  visibility: hidden;
+}
+.checkbox {
+  width: 25px;
+  margin: 10px;
+  position: relative;
+}
+.dope-check-label .dope-check {
+  visibility: hidden;
+  /* <-- hide the default checkbox, the rest is to hide and alllow tabbing, which display:none prevents */
+  display: block;
+  height: 0;
+  width: 0;
+  position: absolute;
+  overflow: hidden;
+}
+.dope-check-label span {
+  /* <-- style the artificial checkbox */
+  position: relative;
+  height: 20px;
+  width: 20px;
+  border: 2px solid rgb(0, 191, 165);
+  border-radius: .25rem;
+  display: inline-block;
+  margin-right: 5px;
+}
+.dope-check-label p {
+  margin: 0;
+  display: inline-block;
+  vertical-align: top;
+}
+[type=checkbox]:checked+span:after {
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 7px;
+  background: 0 0;
+  top: 3px;
+  left: 3px;
+  border: 3px solid #00bfa5;
+  border-top: none;
+  border-right: none;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  opacity: 0;
+}
+[type=checkbox]:checked+span:after {
+  opacity: 1;
+}
+
 /* SLICK */
 .slick a {
   color: unset;
@@ -446,19 +447,24 @@ input[type=checkbox] {
   outline: none;
 }
 .slick h1 {
-  font-size: 20px;
+  display: inline-block;
+  font-size: 18px;
   margin: 0 0 10px;
 }
 .slick p {
   margin: 0;
+  font-weight: 400;
+}
+.slick-list {
+  margin: 0 35px;
 }
 .slick-slide {
   outline: none;
+  margin: 5px;
 }
 .slick-item {
+  padding: 30px 10px;
   display: block;
-  margin: 10px 50px;
-  padding: 50px 10px;
   border: 2px solid rgb(0, 191, 165);
   border-radius: .25rem;
 }
@@ -1142,6 +1148,9 @@ input[type=checkbox] {
 @media screen and (max-width: 767px) {
   body {
     font-size: 12px;
+  }
+  .slick h1 {
+    font-size: 16px;
   }
   .episodes-table .number {
     width: 40px;
